# GigalearnCPP

./: CMakeLists.txt  CMakeSettings.json  README.md
GigaLearnCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/: CMakeLists.txt  README.md
GigaLearnCPP/RLGymCPP/RocketSim/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/RocketSim/src/: RocketSim.cpp  RocketSim.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/: AsyncLogger.h  CommonValues.h  Framework.h  Math.cpp  Math.h  ThreadPool.cpp  ThreadPool.h
GigaLearnCPP/RLGymCPP/thread_pool/: README.md  thread_pool.h  thread_safe_queue.h
GigaLearnCPP/python_scripts/: metric_receiver.py
GigaLearnCPP/src/private/GigaLearnCPP/: FrameworkTorch.h  PolicyVersionManager.cpp  PolicyVersionManager.h
GigaLearnCPP/src/public/GigaLearnCPP/: Framework.h  Learner.cpp  Learner.h  LearnerConfig.h  SkillTrackerConfig.h
RLBotCPP/: CMakeLists.txt  LICENSE  README.md
RLBotCPP/inc/rlbot/: bot.h  botmanager.h  botprocess.h  color.h  controller.h  errorcodes.h  flatbuffercontainer.h  interface.h  matchsettings.h  namedrenderer.h  packets.h  platform.h  renderer.h  rlbot.h  rlbot_generated.h  scopedrenderer.h  server.h  sockets.h  statesetting.h
RLBotCPP/lib/inc/flatbuffers/: base.h  (+10 more)
RLBotCPP/src/: bot.cc  botmanager.cc  botprocess.cc  color.cc  interface.cc  matchsettings.cc  namedrenderer.cc  platform_linux.cc  platform_windows.cc  renderer.cc  scopedrenderer.cc  server.cc  sockets_linux.cc  sockets_windows.cc  statesetting.cc
python_scripts/: sync_metrics_to_wandb.py
src/: BotConfig.cpp  RLBotClient.cpp  RLBotClient.h
tools/: checkpoint_converter.py
(+69 files in other folders)
